--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "daisyui": "^2.17.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.4.0",
+    "react-modal": "^3.15.1",
+    "react-query": "^3.39.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
