--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-hook-form": "^7.33.0",
     "react-icons": "^4.4.0",
     "react-modal": "^3.15.1",
+    "react-paginate": "^8.1.3",
     "react-query": "^3.39.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
