--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-modal": "^3.15.1",
     "react-paginate": "^8.1.3",
     "react-query": "^3.39.1",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
